--- a/briar-android/src/main/res/values-eu/strings.xml
+++ b/briar-android/src/main/res/values-eu/strings.xml
@@ -21,6 +21,7 @@
   <string name="startup_failed_notification_text">Agian Briar berrinstalatu behar duzu.</string>
   <string name="startup_failed_activity_title">Briar abio-hutsegitea</string>
   <string name="startup_failed_db_error">Arrazoiren bategatik, zure Briar datubasea hondatuta dago eta ezin da konpondu. Zure kontua, datuak eta kontaktuekin konexioak galdu dira. Zoritxarrez Briar berrinstalatu behar duzu kontu berria sortzeko.</string>
+  <string name="startup_failed_service_error">Briar aplikazioak ezin izan du ezinbesteko plugin bat abiatu. Briar berrinstalatzeak arazoa konpondu ohi du. Hala ere, jakin zure kontua eta datuak galduko dituzula Briar aplikazioak ez baititu zerbitzari zentralak erabiltzen zure datuak gordetzeko.</string>
   <plurals name="expiry_warning">
     <item quantity="one">Hau Briar aplikazioaren beta bertsio bat da. Zure kontua egun %d barru iraungitu da eta ezin da berritu.</item>
     <item quantity="other">Hau Briar aplikazioaren beta bertsio bat da. Zure kontua  %d egun barru iraungitu da eta ezin da berritu.</item>
@@ -79,32 +80,42 @@
   <string name="text_too_long">Sartutako testua luzeegia da</string>
   <string name="show_onboarding">Erakutsi laguntza elkarrizketa-koadroa</string>
   <!--Contacts and Private Conversations-->
+  <string name="no_contacts">Badirudi heldu berria zarela eta ez duzula kontakturik hemen oraindik.\n\nSakatu goiko + ikonoa eta jarraitu argibideak lagunak zure zerrendara gehitzeko.\nGogoratu: Kontaktu berriak aurrez aurre besterik ezin dira gehitu beste inork zure itxurak ez egiteko edo zure mezuak ez irakurtzeko.</string>
   <string name="date_no_private_messages">Mezurik ez.</string>
+  <string name="no_private_messages">Hau elkarrizketa ikuspegia da.\n\nBadirudi ez dagoela elkarrizketarik.\n\nSakatu beheko sarrera eremua elkarrizketa hasteko.</string>
   <string name="message_hint">Idatzi mezua</string>
   <string name="delete_contact">Ezabatu kontaktua</string>
   <string name="dialog_title_delete_contact">Berretsi kontaktua ezabatzea</string>
+  <string name="dialog_message_delete_contact">Ziur kontaktu hau eta berarekin trukatutako mezu guztiak mezu guztiak kendu nahi dituzula?</string>
   <string name="contact_deleted_toast">Kontaktua ezabatuta</string>
   <!--Adding Contacts-->
   <string name="add_contact_title">Gehitu kontaktua</string>
   <string name="your_nickname">Hautatu erabili nahi duzun identitatea:</string>
+  <string name="face_to_face">Aurrez aurre aurkitu behar zara pertsonarekin kontaktua gehitzeko.\n\nHonek inork zure itxurak egitea edo zure mezuak irakurtzea eragotziko du.</string>
   <string name="continue_button">Jarraitu</string>
   <string name="your_invitation_code">Zure gonbidapen kodea hau da</string>
   <string name="enter_invitation_code">Sartu zure gonbidapen kodea:</string>
+  <string name="searching_format">%06d gonbidapen kodea duen erabiltzailea bilatzen\u2026</string>
   <string name="connection_failed">Konexioak huts egin du</string>
+  <string name="could_not_find_contact">Briar aplikazioak ezin izan du zure kontaktua inguruan aurkitu</string>
   <string name="try_again_button">Saiatu berriro</string>
   <string name="connected_to_contact">Kontaktura konektatuta</string>
   <string name="calculating_confirmation_code">Berreste kode kalkulatzen\u2026</string>
   <string name="your_confirmation_code">Zure berreste kodea hau da:</string>
   <string name="enter_confirmation_code">Sartu zure kontaktuaren berreste kodea:</string>
   <string name="waiting_for_contact">Kontaktuaren zain\u2026</string>
+  <string name="waiting_for_contact_to_scan">Kontaktuak eskaneatu dezan eta konektatu dadin zain\u2026</string>
   <string name="exchanging_contact_details">Kontaktu-xehetasunak trukatzen\u2016</string>
   <string name="codes_do_not_match">Kodeak ez datoz bat</string>
+  <string name="interfering">Norbait zure konexioan interferentziak sortzen saiatzen ari dela esan nahi lezake</string>
   <string name="contact_added_toast">Kontaktua gehituta: %s</string>
   <string name="contact_already_exists">%s kontaktua badago aurretik</string>
   <string name="contact_exchange_failed">Kontaktuen trukeak huts egin du</string>
   <string name="qr_code_invalid">QR kodea baliogabea da</string>
   <string name="connecting_to_device">Gailura konektatzen\u2026</string>
   <string name="authenticating_with_device">Gailuarekin autentifikatzen\u2026</string>
+  <string name="connection_aborted_local">Guk eten dugu konexioa! Norbait zure konexioan interferentziak sortzen saiatzen ari dela esan nahi lezake</string>
+  <string name="connection_aborted_remote">Zure kontaktuak eten du konexioa! Norbait zure konexioan interferentziak sortzen saiatzen ari dela esan nahi lezake</string>
   <!--Introductions-->
   <string name="introduction_onboarding_title">Aurkeztu zure kontaktuak</string>
   <string name="introduction_onboarding_text">Zure kontaktuak bata besteari aurkeztu ditzakezu, horrela ez dute aurrez aurre elkartzeko beharra Briar erabiltzeko.</string>
@@ -129,6 +140,7 @@
     <item quantity="other">%d kontaktu berri gehituta.</item>
   </plurals>
   <!--Private Groups-->
+  <string name="groups_list_empty">Ez zaude inolako taldetan parte hartzen.\n\nSakatu goiko + ikonoa zuk zeuk talde bat sartzeko edo eskatu kontaktuei bere talderen batetara zu gonbidatzea.</string>
   <string name="groups_created_by">%s erabiltzaileak sortuta</string>
   <plurals name="messages">
     <item quantity="one">mezu %d</item>
@@ -154,8 +166,10 @@
   <string name="groups_leave_dialog_message">Ziur talde hau utzi nahi duzula?</string>
   <string name="groups_dissolve">Disolbatu taldea</string>
   <string name="groups_dissolve_dialog_title">Berretsi taldea disolbatzea</string>
+  <string name="groups_dissolve_dialog_message">Ziur talde hau disolbatu nahi duzula?\n\nBeste kideek ezin izango dute elkarrizketarekin jarraitu eta ez dituzu azken mezuak jasoko.</string>
   <string name="groups_dissolve_button">Disolbatu</string>
   <string name="groups_dissolved_dialog_title">Taldea disolbatu da</string>
+  <string name="groups_dissolved_dialog_message">Talde honen sortzaileak taldea disolbatu du.\n\nEzin dituzu jada mezuak bidali talde honetara eta agian ez dituzu jasoko idatzi diren mezu guztiak.</string>
   <!--Private Group Invitations-->
   <string name="groups_invitations_title">Talde gonbidapenak</string>
   <string name="groups_invitations_invitation_sent">%1$s erabiltzailea \"%2$s\" taldera gonbidatu duzu.</string>
@@ -170,17 +184,21 @@
   <string name="groups_invitations_response_declined_sent">%s erabiltzailearen talde gonbidapena ukatu duzu. </string>
   <string name="groups_invitations_response_accepted_received">%s erabiltzaileak talde gonbidapena onartu du.</string>
   <string name="groups_invitations_response_declined_received">%s erabiltzaileak talde gonbidapena ukatu du.</string>
+  <string name="sharing_status_groups">Sortzaileak besterik ezin ditu kide berriak gehitu taldera. Behean oraingo kide guztiak daude.</string>
   <!--Private Groups Revealing Contacts-->
   <string name="groups_reveal_contacts">Argitara eman kontaktuak</string>
+  <string name="groups_reveal_dialog_message">Taldeko oraingo eta etorkizuneko kide guztiei kontaktuak argitara eman ala ez aukeratu dezakezu.\n\nKontaktuak partekatzean zure taldera konexioa azkarragoa eta egonkorragoa izango da, argitara emandako kontaktuekin komunikatu zaitezkeelako sortzailea deskonektatuta badago ere.</string>
   <string name="groups_reveal_visible">Kontaktuen erlazioa taldean ikusgai dago</string>
   <string name="groups_reveal_visible_revealed_by_us">Kontaktuen erlazioa taldean ikusgai dago (Zuk argitara emana)</string>
   <string name="groups_reveal_visible_revealed_by_contact">Kontaktuen erlazioa taldean ikusgai dago (%s erabiltzaileak argitara emana)</string>
   <string name="groups_reveal_invisible">Kontaktuen erlazioa ez dago taldean ikusgai</string>
   <!--Forums-->
+  <string name="no_forums">Ez duzu fororik oraindik.\n\nSortu batu zuk zeuk goiko + ikonoa sakatuz.\n\nKontaktuei eskatu ahal diezu ere foroak zurekin partekatu ditzatela.</string>
   <string name="create_forum_title">Sortu foroa</string>
   <string name="choose_forum_hint">Hautatu zure foroaren izena</string>
   <string name="create_forum_button">Sortu foroa</string>
   <string name="forum_created_toast">Foroa sortuta</string>
+  <string name="no_forum_posts">Foro hau hutsik dago.\n\nErabili goiko arkatzaren ikonoa lehen mezua idazteko.\n\nBakarrik sentitzen zara hemen? Partekatu foro hau zure kontaktuekin!</string>
   <string name="no_posts">Sarrerarik ez</string>
   <plurals name="posts">
     <item quantity="one">Bidalketa %d</item>
@@ -192,16 +210,21 @@
   <string name="btn_reply">Erantzun</string>
   <string name="forum_leave">Utzi foroa</string>
   <string name="dialog_title_leave_forum">Berretsi foroa uztea</string>
+  <string name="dialog_message_leave_forum">Ziur foro hau utzi nahi duzula? Zure kontaktuekin foro hau partekatu baduzu, agian ez dituzte eguneraketa gehiago jasoko.</string>
   <string name="dialog_button_leave">Utzi</string>
   <string name="forum_left_toast">Foroa utzita</string>
   <!--Forum Sharing-->
   <string name="forum_share_button">Partekatu foroa</string>
   <string name="contacts_selected">Kontaktuak hautatuta</string>
   <string name="activity_share_toolbar_header">Hautatu kontaktuak</string>
+  <string name="no_contacts_selector">Badirudi hemen berria zarela eta ez duzula kontakturik oraindik.\n\nItzuli hona gutxienez kontaktu bat gehitu eta gero.</string>
   <string name="forum_shared_snackbar">Foroa partekatuta hautatutako kontaktuekin</string>
   <string name="forum_share_message">Gehitu mezua (aukerazkoa)</string>
   <string name="forum_share_error">Errore bat egon da foro hau partekatzean.</string>
+  <string name="forum_invitation_received">%1$s erabiltzaileak \"%2$s\" foroa partekatu du zurekin.</string>
+  <string name="forum_invitation_sent">\"%1$s\" foroa partekatu duzu %2$s erabiltzailearekin.</string>
   <string name="forum_invitations_title">Forora gonbidapenak</string>
+  <string name="forum_invitation_exists">Onartu duzu jada foro honetarako gonbidapen bat. Gonbidapen gehiago onartzeak foroarekin komunikazioa hobetu eta indartuko du.</string>
   <string name="forum_joined_toast">Forora elkartuta</string>
   <string name="forum_declined_toast">Foro gonbidapena ukatuta</string>
   <string name="shared_by_format">%s erabiltzaileak partekatuta</string>
@@ -211,6 +234,7 @@
   <string name="forum_invitation_response_accepted_received">%s erabiltzaileak foro gonbidapena onartu du.</string>
   <string name="forum_invitation_response_declined_received"> %s erabiltzaileak foro gonbidapena ukatu du.</string>
   <string name="sharing_status">Partekatze egoera</string>
+  <string name="sharing_status_forum">Foroko edozein kidek partekatu dezake bere kontaktuekin. Honako erabiltzaileekin partekatzen duzu zuk. Ikusten ez dituzun kide gehiago egon daitezke.</string>
   <string name="shared_with">%1$d erabiltzaileekin partekatuta (%2$d konektatuta)</string>
   <plurals name="forums_shared">
     <item quantity="one">Kontaktuek partekatutako foro %d</item>
@@ -218,6 +242,7 @@
   </plurals>
   <string name="nobody">Inor ez</string>
   <!--Blogs-->
+  <string name="blogs_other_blog_empty_state">Blog hau orain hutsik dago.\n\nEgileak ez du ezer idatzi edo blog hau zurekin partekatu duen kontaktua deskonektatuta dago, eta ezin da orain sinkronizatu.</string>
   <string name="read_more">irakurri gehiago</string>
   <string name="blogs_write_blog_post">Idatzi blog sarrera</string>
   <string name="blogs_write_blog_post_body_hint">Idatzi zure blog sarrera hemen</string>
@@ -225,7 +250,9 @@
   <string name="blogs_blog_post_created">Blog sarrera sortuta</string>
   <string name="blogs_blog_post_received">Blog sarrera berria jasota</string>
   <string name="blogs_blog_post_scroll_to">Korritu hona</string>
+  <string name="blogs_feed_empty_state">Hau blogen jario orokorra da.\n\nBadirudi inork ez duela blog sarrerarik idatzi oraindik.\n\nIzan lehena eta sakatu arkatzaren ikonoa blog sarrera bat idazteko.</string>
   <string name="blogs_remove_blog">Kendu bloga</string>
+  <string name="blogs_remove_blog_dialog_message">Ziur blog hau eta sarrera guztiak kendu nahi dituzula?\nJakin honek ez duela bloga kenduko besteen gailuetatik.</string>
   <string name="blogs_remove_blog_ok">Kendu bloga</string>
   <string name="blogs_blog_removed">Bloga kenduta</string>
   <string name="blogs_reblog_comment_hint">Gehitu iruzkina (aukerazkoa)</string>
@@ -239,20 +266,27 @@
   <string name="blogs_sharing_response_declined_sent">%s erabiltzailearen blog gonbidapena ukatu duzu.</string>
   <string name="blogs_sharing_response_accepted_received">%s erabiltzaileak blog gonbidapena onartu du.</string>
   <string name="blogs_sharing_response_declined_received">%s erabiltzaileak blog gonbidapena ukatu du.</string>
+  <string name="blogs_sharing_invitation_received">%1$s erabiltzaileak \"%2$s\" bloga partekatu du zurekin.</string>
+  <string name="blogs_sharing_invitation_sent">\"%1$s\" bloga partekatu duzu %2$s erabiltzailearekin.</string>
   <string name="blogs_sharing_invitations_title">Blog gonbidapenak</string>
   <string name="blogs_sharing_joined_toast">Blogera harpidetuta</string>
   <string name="blogs_sharing_declined_toast">Blog gonbidapena ukatuta</string>
+  <string name="sharing_status_blog">Blog batetara harpidetutako edonork berau partekatu dezake bere kontaktuekin. Honako kontaktuekin partekatzen duzu zuk. Ikusten ez dituzun harpidedun gehiago egon daitezke.</string>
   <!--RSS Feeds-->
   <string name="blogs_rss_feeds_import">Inportatu RSS jarioa</string>
   <string name="blogs_rss_feeds_import_button">Inportatu</string>
   <string name="blogs_rss_feeds_import_hint">Sartu RSS jarioaren URLa</string>
+  <string name="blogs_rss_feeds_import_error">Sentitzen dugu! Zure jarioa inportatzean errore bat gertatu da.</string>
   <string name="blogs_rss_feeds_manage">Kudeatu RSS jarioak</string>
   <string name="blogs_rss_feeds_manage_imported">Inportatuta:</string>
   <string name="blogs_rss_feeds_manage_author">Egilea:</string>
   <string name="blogs_rss_feeds_manage_updated">Azken eguneraketa:</string>
   <string name="blogs_rss_remove_feed">Kendu jarioa:</string>
+  <string name="blogs_rss_remove_feed_dialog_message">Ziur jario hau eta bere sarrera guztiak kendu nahi dituzula?\nPartekatu dituzun sarrerak ez dira besteen gailuetatik kenduko.</string>
   <string name="blogs_rss_remove_feed_ok">Kendu jarioa</string>
   <string name="blogs_rss_feeds_manage_delete_error">Ezin izan da jarioa ezabatu!</string>
+  <string name="blogs_rss_feeds_manage_empty_state">Ez duzu RSS jariorik inportatu.\n\nSakatu goiko eskumako + ikonoa lehena gehitzeko.</string>
+  <string name="blogs_rss_feeds_manage_error">Arazo bat egon da zure jarioak kargatzean. Saiatu berriro geroago.</string>
   <!--Settings Network-->
   <string name="network_settings_title">Sareak</string>
   <string name="bluetooth_setting">Bluetooth bidez konektatuta</string>
@@ -307,6 +341,7 @@
   <!--Link Warning-->
   <string name="link_warning_title">Estekari buruzko abisua</string>
   <string name="link_warning_intro">Honako esteka hau kanpo aplikazio batekin irekitzear zaude.</string>
+  <string name="link_warning_text">Hau zu identifikatzeko erabili daiteke. Pentsatu esteka hau bidali dizun pertsonarengan konfiantza duzun eta baloratu Orfox bidez irekitzea.</string>
   <string name="link_warning_open_link">Ireki esteka</string>
   <!--Crash Reporter-->
   <string name="crash_report_title">Briar kraskatze errorea</string>
@@ -328,4 +363,5 @@
   <string name="progress_title_logout">Briar saioa amaitzen...</string>
   <!--Screen Filters & Tapjacking-->
   <string name="screen_filter_title">Pantaila gainjartzea antzeman da</string>
+  <string name="screen_filter_body">Briar aplikazioaren gainean marrazten ari den beste aplikazio bat dago. Zure segurtasuna babesteko Briar aplikazioak ez dio ukimenari erantzungo beste aplikazio bat gainean marrazten dagoen bitartean.\n\nSaiatu honako aplikazioak ixten Briar erabiltzean:\n\n%1$s</string>
 </resources>
