--- a/briar-android/src/main/res/values-bg/strings.xml
+++ b/briar-android/src/main/res/values-bg/strings.xml
@@ -52,11 +52,11 @@
     <item quantity="other">%d нови групови съобщения.</item>
   </plurals>
   <plurals name="forum_post_notification_text">
-    <item quantity="one">Нов форумен пост.</item>
+    <item quantity="one">Нова форумна публикация.</item>
     <item quantity="other">%d нови форумни публикации.</item>
   </plurals>
   <plurals name="blog_post_notification_text">
-    <item quantity="one">Нов блог пост.</item>
+    <item quantity="one">Нова блог публикация.</item>
     <item quantity="other">%d нови блог публикации.</item>
   </plurals>
   <!--Misc-->
@@ -249,6 +249,7 @@
   <string name="blogs_publish_blog_post">Публикуване</string>
   <string name="blogs_blog_post_created">Блог публикацията е създадена</string>
   <string name="blogs_blog_post_received">Нова блог публикация</string>
+  <string name="blogs_blog_post_scroll_to">Отвори</string>
   <string name="blogs_feed_empty_state">Това е глобалната блог емисия.\n\nНикой още не е публикувал нищо.\n\nБъдете първия и натиснете писалката, за да напишете първата блог публикация.</string>
   <string name="blogs_remove_blog">Премахване на блог</string>
   <string name="blogs_remove_blog_dialog_message">Сигурни ли сте, че искате да премахнете този блог и всички публикации?\nБлогът няма да бъдат премахнат от устройствата на други хора.</string>
@@ -297,7 +298,7 @@
   <string name="tor_network_setting_always">През Wi-Fi или мобилни данни</string>
   <!--Settings Security and Panic-->
   <string name="security_settings_title">Сигурност</string>
-  <string name="change_password">Промяна на паролата</string>
+  <string name="change_password">Промяна на парола</string>
   <string name="current_password">Въведете сегашната си парола:</string>
   <string name="choose_new_password">Изберете нова парола:</string>
   <string name="confirm_new_password">Потвърдете нова парола:</string>
