--- a/briar-android/src/main/res/values-de/strings.xml
+++ b/briar-android/src/main/res/values-de/strings.xml
@@ -16,7 +16,7 @@
   <string name="sign_in_button">Anmelden</string>
   <string name="forgotten_password">Ich habe mein Passwort vergessen</string>
   <string name="dialog_title_lost_password">Passwort vergessen</string>
-  <string name="dialog_message_lost_password">Dein Briar-Konto ist  verschlüsselt auf deinem Gerät gespeichert und nicht mit der \"Cloud\" synchronisiert. Deshalb können wir dein Passwort nicht zurücksetzen. Willst du dein Konto löschen und neu beginnen?\n\nAchtung: Deine bestehenden Identitäten, Kontakte und Nachrichten gehen dann für immer verloren.</string>
+  <string name="dialog_message_lost_password">Dein Briar-Konto ist verschlüsselt auf deinem Gerät gespeichert und nicht mit der \"Cloud\" synchronisiert. Deshalb können wir dein Passwort nicht zurücksetzen. Willst du dein Konto löschen und neu beginnen?\n\nAchtung: Deine bestehenden Identitäten, Kontakte und Nachrichten gehen dann für immer verloren.</string>
   <string name="startup_failed_notification_title">Briar konnte nicht gestartet werden</string>
   <string name="startup_failed_notification_text">Möglicherweise hilft eine Neuinstallation von Briar.</string>
   <string name="startup_failed_activity_title">Fehler beim Starten von Briar</string>
@@ -26,7 +26,7 @@
     <item quantity="one">Dies ist eine Beta-Version von Briar. Dein Konto läuft in %d Tag ab und kann nicht verlängert werden.</item>
     <item quantity="other">Dies ist eine Beta-Version von Briar. Dein Konto läuft in %d Tagen ab und kann nicht verlängert werden.</item>
   </plurals>
-  <string name="expiry_date_reached">Diese Software ist abgelaufen.\nDanke dass Du Briar getestet hast!</string>
+  <string name="expiry_date_reached">Diese Software ist abgelaufen.\nDanke dass du Briar getestet hast!</string>
   <!--Navigation Drawer-->
   <string name="nav_drawer_open_description">Navigationsleiste öffnen</string>
   <string name="nav_drawer_close_description">Navigationsleiste schliessen</string>
@@ -94,31 +94,31 @@
   <string name="face_to_face">Um einen neuen Kontakt hinzuzufügen, ist es notwendig, dass sich beide Kontakte an einem Ort treffen.\n\nDadurch wird betrügerische Identitätsvortäuschung und unautorisierter Kommunikationszugriff verhindert.</string>
   <string name="continue_button">Weiter</string>
   <string name="your_invitation_code">Dein Einladungs-Code ist</string>
-  <string name="enter_invitation_code">Bitte gib den Einladungs-Code Deines Kontakts an:</string>
+  <string name="enter_invitation_code">Bitte gib den Einladungs-Code deines Kontakts an:</string>
   <string name="searching_format">Suche nach Kontakt mit Einladungs-Code %06d\u2026</string>
   <string name="connection_failed">Verbindung fehlgeschlagen</string>
-  <string name="could_not_find_contact">Briar kann Deinen Kontakt nicht innerhalb der Reichweite finden</string>
+  <string name="could_not_find_contact">Briar kann deinen Kontakt nicht innerhalb der Reichweite finden</string>
   <string name="try_again_button">Noch einmal versuchen</string>
   <string name="connected_to_contact">Mit Kontakt verbunden</string>
   <string name="calculating_confirmation_code">Bestätigungscode wird berechnet\u2026</string>
   <string name="your_confirmation_code">Dein Bestätigungscode ist</string>
-  <string name="enter_confirmation_code">Bitte gebe den Bestätigungscode Deines Kontakts ein:</string>
+  <string name="enter_confirmation_code">Bitte gebe den Bestätigungscode deines Kontakts ein:</string>
   <string name="waiting_for_contact">Warte auf Kontakt\u2026</string>
   <string name="waiting_for_contact_to_scan">Warte auf Scan und Verbindung mit dem Kontakt\u2026</string>
   <string name="exchanging_contact_details">Kontaktdetails werden ausgetauscht\u2026</string>
   <string name="codes_do_not_match">Codes stimmen nicht überein</string>
-  <string name="interfering">Möglicherweise stört jemand Deine Verbindung</string>
+  <string name="interfering">Möglicherweise stört jemand deine Verbindung.</string>
   <string name="contact_added_toast">Kontakt hinzugefügt: %s</string>
   <string name="contact_already_exists">Kontakt %s existiert bereits</string>
   <string name="contact_exchange_failed">Kontaktaustausch fehlgeschlagen</string>
   <string name="qr_code_invalid">Der QR-Code ist ungültig</string>
   <string name="connecting_to_device">Verbinde mit Gerät\u2026</string>
   <string name="authenticating_with_device">Authentifiziere Gerät\u2026</string>
-  <string name="connection_aborted_local">Verbindung wurde durch uns abgebrochen! Möglicherweise stört jemand Deine Verbindung.</string>
-  <string name="connection_aborted_remote">Verbindung wurde durch Deinen Kontakt abgebrochen! Möglicherweise stört jemand Deine Verbindung</string>
+  <string name="connection_aborted_local">Verbindung wurde durch uns abgebrochen! Möglicherweise stört jemand deine Verbindung.</string>
+  <string name="connection_aborted_remote">Verbindung wurde durch deinen Kontakt abgebrochen! Möglicherweise stört jemand deine Verbindung</string>
   <!--Introductions-->
-  <string name="introduction_onboarding_title">Mache Deine Kontakte untereinander bekannt</string>
-  <string name="introduction_onboarding_text">Du kannst Deine Kontakte untereinander bekannt machen. So können sie sich über Briar verbinden, ohne sich persönlich treffen zu müssen.</string>
+  <string name="introduction_onboarding_title">Mache deine Kontakte untereinander bekannt</string>
+  <string name="introduction_onboarding_text">Du kannst deine Kontakte untereinander bekannt machen. So können sie sich über Briar verbinden, ohne sich persönlich treffen zu müssen.</string>
   <string name="introduction_activity_title">Kontakt auswählen</string>
   <string name="introduction_message_title">Kontakte untereinander bekannt machen</string>
   <string name="introduction_message_hint">Nachricht hinzufügen (optional)</string>
@@ -127,7 +127,7 @@
   <string name="introduction_error">Es gab einen Fehler beim Versuch, die Kontaktempfehlung zu verschicken</string>
   <string name="introduction_response_error">Fehler bei Antwort auf Kontaktempfehlung</string>
   <string name="introduction_request_sent">Du wolltest %1$s an %2$s als Kontakt empfehlen</string>
-  <string name="introduction_request_received">%1$s schlägt vor, dich als Kontakt an %2$s zu empfehlen. Möchtest Du %2$s zu deiner Kontaktliste hinzufügen?</string>
+  <string name="introduction_request_received">%1$s schlägt vor, dich als Kontakt an %2$s zu empfehlen. Möchtest du %2$s zu deiner Kontaktliste hinzufügen?</string>
   <string name="introduction_request_exists_received">%1$s schlägt vor, dich als Kontakt an %2$s zu empfehlen. %2$s ist allerdings bereits in deiner Kontaktliste. Da %1$s das vielleicht nicht weiss, kannst du trotzdem antworten:</string>
   <string name="introduction_request_answered_received">%1$s schlägt vor, dich als Kontakt an %2$s zu empfehlen. </string>
   <string name="introduction_response_accepted_sent">Du hast die Kontaktempfehlung für %1$s angenommen.</string>
@@ -163,10 +163,10 @@
   <string name="groups_member_joined">%s ist der Gruppe beigetreten</string>
   <string name="groups_leave">Gruppe verlassen</string>
   <string name="groups_leave_dialog_title">Verlassen der Gruppe bestätigen</string>
-  <string name="groups_leave_dialog_message">Bist Du sicher, dass Du die Gruppe verlassen willst?</string>
+  <string name="groups_leave_dialog_message">Bist du sicher, dass du die Gruppe verlassen willst?</string>
   <string name="groups_dissolve">Gruppe auflösen</string>
   <string name="groups_dissolve_dialog_title">Auflösung der Gruppe bestätigen</string>
-  <string name="groups_dissolve_dialog_message">Willst Du wirklich diese Gruppe auflösen?\n\nAlle anderen Teilnehmer verlieren die Möglichkeit der Kommunikation ohne möglicherweise die neuesten Nachrichten erhalten zu haben.</string>
+  <string name="groups_dissolve_dialog_message">Willst du wirklich diese Gruppe auflösen?\n\nAlle anderen Teilnehmer verlieren die Möglichkeit der Kommunikation ohne möglicherweise die neuesten Nachrichten erhalten zu haben.</string>
   <string name="groups_dissolve_button">Auflösen</string>
   <string name="groups_dissolved_dialog_title">Gruppe wurde aufgelöst</string>
   <string name="groups_dissolved_dialog_message">Der Ersteller dieser Gruppe hat dieselbe aufgelöst.\n\nEs können keine weiteren Nachrichten mehr in dieser Gruppe geschrieben werden und möglicherweise wurden noch nicht alle Nachrichten empfangen.</string>
@@ -195,7 +195,7 @@
   <!--Forums-->
   <string name="no_forums">Du hast noch keine Foren.\n\nWarum erstellst du nicht einfach selbst ein neues Forum, indem du auf das \"+\"-Symbol am oberen Bildschirmrand tippst?\n\nDu kannst auch deine Kontakte auffordern, Foren mit dir zu teilen.</string>
   <string name="create_forum_title">Forum erstellen</string>
-  <string name="choose_forum_hint">Wähle einen Namen für Dein Forum</string>
+  <string name="choose_forum_hint">Wähle einen Namen für dein Forum</string>
   <string name="create_forum_button">Forum erstellen</string>
   <string name="forum_created_toast">Forum wurde erstellt</string>
   <string name="no_forum_posts">Dieses Forum ist leer.\n\nBenutze das Stift-Icon am oberen Bildschirmrand um den ersten Beitrag zu verfassen.\n\nFühlst du dich einsam hier? Dann teile das Forum mit weiteren Kontakten!</string>
@@ -245,14 +245,14 @@
   <string name="blogs_other_blog_empty_state">Dieser Blog ist momentan leer.\n\nEntweder hat der Autor noch nichts geschrieben, oder die Person, die diesen Blog mit dir geteilt hat, muss online kommen, sodass Beiträge synchronisiert werden können.</string>
   <string name="read_more">weiterlesen</string>
   <string name="blogs_write_blog_post">Blogbeitrag erstellen</string>
-  <string name="blogs_write_blog_post_body_hint">Gib hier Deinen Blogbeitrag ein</string>
+  <string name="blogs_write_blog_post_body_hint">Gib hier deinen Blogbeitrag ein</string>
   <string name="blogs_publish_blog_post">Veröffentlichen</string>
   <string name="blogs_blog_post_created">Blogbeitrag erstellt</string>
   <string name="blogs_blog_post_received">Neuen Blogbeitrag empfangen</string>
   <string name="blogs_blog_post_scroll_to">Scrolle zu</string>
   <string name="blogs_feed_empty_state">Dies ist die globale Blog-Zeitleiste.\n\nOffensichtlich hat noch niemand etwas veröffentlicht.\n\nSei die oder der Erste und tippe auf das Stift-Icon, um einen neuen Blogbeitrag zu verfassen.</string>
   <string name="blogs_remove_blog">Blog entfernen</string>
-  <string name="blogs_remove_blog_dialog_message">Bist Du sicher, dass Du diesen Blog und alle dazugehörigen Beiträge löschen möchtest?\nBeachte, dass dies nicht den Blog auf Geräten anderer Leute löscht.</string>
+  <string name="blogs_remove_blog_dialog_message">Bist du sicher, dass du diesen Blog und alle dazugehörigen Beiträge löschen möchtest?\nBeachte, dass dies nicht den Blog auf Geräten anderer Leute löscht.</string>
   <string name="blogs_remove_blog_ok">Blog entfernen</string>
   <string name="blogs_blog_removed">Blog wurde entfernt</string>
   <string name="blogs_reblog_comment_hint">Kommentar hinzufügen (optional)</string>
@@ -341,24 +341,24 @@
   <!--Link Warning-->
   <string name="link_warning_title">Link-Warnung</string>
   <string name="link_warning_intro">Du willst folgenden Link mit einer externen App öffnen.</string>
-  <string name="link_warning_text">Dies kann zu Deiner Identifzierung benutzt werden. Überlege, ob die Person die Dir diesen Link geschickt hat, vertrauenswürdig ist und ob Du ihn nicht besser mit Orfox öffnest.</string>
+  <string name="link_warning_text">Dies kann zu deiner Identifzierung benutzt werden. Überlege, ob die Person, die dir diesen Link geschickt hat, vertrauenswürdig ist und ob du ihn nicht besser mit Orfox öffnest.</string>
   <string name="link_warning_open_link">Link öffnen</string>
   <!--Crash Reporter-->
   <string name="crash_report_title">Briar-Absturzbericht</string>
   <string name="briar_crashed">Es tut uns leid, Briar ist abgestürzt.</string>
   <string name="not_your_fault">Das ist nicht deine Schuld.</string>
-  <string name="please_send_report">Bitte hilf uns, Briar zu verbessern, indem Du einen Absturzbericht sendest.</string>
+  <string name="please_send_report">Bitte hilf uns, Briar zu verbessern, indem du einen Absturzbericht sendest.</string>
   <string name="report_is_encrypted">Wir versprechen, dass der Bericht verschlüsselt ist und über eine sichere Verbindung geschickt wird.</string>
   <string name="feedback_title">Feedback</string>
   <string name="describe_crash">Beschreibe was passiert ist (optional)</string>
-  <string name="enter_feedback">Gib Dein Feedback ein</string>
+  <string name="enter_feedback">Gib dein Feedback ein</string>
   <string name="optional_contact_email">Deine E-Mail-Adresse (optional)</string>
   <string name="include_debug_report_crash">Anonymisierte Daten über den Absturz anhängen</string>
   <string name="include_debug_report_feedback">Anonymisierte Daten über dieses Gerät anhängen</string>
   <string name="could_not_load_report_data">Konnte Daten des Berichts nicht laden</string>
   <string name="send_report">Bericht abschicken</string>
   <string name="close">Schließen</string>
-  <string name="dev_report_saved">Der Bericht wurde gespeichert. Er wird verschickt, wenn Du Dich das nächste Mal bei Briar anmeldest.</string>
+  <string name="dev_report_saved">Der Bericht wurde gespeichert. Er wird verschickt, wenn du dich das nächste Mal bei Briar anmeldest.</string>
   <!--Sign Out-->
   <string name="progress_title_logout">Von Briar abmelden ...</string>
   <!--Screen Filters & Tapjacking-->
